# ssvm-nodejs-starter

./: Cargo.toml  README.md
node/: server.js  test.js
node/public/: index.html
src/: lib.rs
