[package]
name = "interest"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "interest_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

